objects/LLC_BI__CFG_ConfigKey__c.object
<CustomObject>
    <description>Config Keys tell the system in what specific instances actions should be taken</description>
    <fields>
        <fullName>LLC_BI__Action_Display_Name__c</fullName>
        <description>An administrator populates this optional picklist to add the name of the custom modification that should appear to the user in the Relationship Credit Action workflow. By default, it includes Modification and Renewal.</description>
        <label>Action Display Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Action_Name__c</fullName>
        <description>This picklist field controls the name of the specific action an admin configures, such as Short Term Extension or Modify.</description>
        <label>Action Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short Term Extension</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Action_Type__c</fullName>
        <description>Admins populate this picklist field to control what workflow the action uses. The available picklist options include Material Mod (used for new loans) or Non-Material Mod (Memo).</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Material Modification</fullName>
                </value>
                <value>
                    <fullName>Non-Material Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFG_ConfigKey</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CFG_ConfigType Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFG_ConfigKeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>